Fix spacing around plans accounts items

--- a/resources/assets/css/inner/settings.less
+++ b/resources/assets/css/inner/settings.less
@@ -36,10 +36,6 @@
   }
 }
 
-.plans-accounts {
-  margin-top: 2em;
-}
-
 .settings-item {
   padding: 2em 1.4em;
 
@@ -49,6 +45,9 @@
 
   .plans-accounts {
     margin-top: 2em;
+    > div .account-plan-pricing-org-link {
+      padding-left: 4px;
+    }
   }
 }
 
